--- a/package.json
+++ b/package.json
@@ -28,6 +28,17 @@
   "manifest": {
     "host_permissions": [
       "https://*/*"
+    ],
+    "permissions": [ "scripting", "activeTab", "storage" ],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "fonts/nanum-pretty-mk.ttf"
+        ],
+        "matches": [
+          "https://*/*"
+        ]
+      }
     ]
   }
 }
