--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "fonts/nanum-pretty-mk.ttf"
+          "fonts/nanum-pretty-mk.ttf",
+          "fonts/KazuFont.ttf"
         ],
         "matches": [
           "https://*/*"
