--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tiramisu",
   "displayName": "Tiramisu",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Chrome extension for supporting Korean and Japanese fonts to Excalidraw",
   "author": "Jung W. Park (kuskhan@gmail.com)",
   "scripts": {
@@ -29,7 +29,7 @@
     "host_permissions": [
       "https://excalidraw.com/*"
     ],
-    "permissions": [ "activeTab", "storage" ],
+    "permissions": ["storage" ],
     "web_accessible_resources": [
       {
         "resources": [
