--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "package": "plasmo package"
   },
   "dependencies": {
-    "plasmo": "0.83.0",
+    "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
@@ -29,7 +29,9 @@
     "host_permissions": [
       "https://excalidraw.com/*"
     ],
-    "permissions": ["storage" ],
+    "permissions": [
+      "storage"
+    ],
     "web_accessible_resources": [
       {
         "resources": [
